--- a/roles/aws-route53/tasks/zones/foipme.yml
+++ b/roles/aws-route53/tasks/zones/foipme.yml
@@ -5,8 +5,7 @@
     command: create
     zone: foip.me
     record: foip.me.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: A
     ttl: "86400"
     value: 67.199.248.13,67.199.248.12
@@ -17,8 +16,7 @@
     command: create
     zone: foip.me
     record: foip.me.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: NS
     ttl: "172800"
     value: ns-1164.awsdns-17.org.,ns-1794.awsdns-32.co.uk.,ns-76.awsdns-09.com.,ns-979.awsdns-58.net.
@@ -41,8 +39,7 @@
     command: create
     zone: foip.me
     record: dud.foip.me.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: A
     ttl: "300"
     value: "{{ loadbalancer_ip }}"
@@ -53,8 +50,7 @@
     command: create
     zone: foip.me
     record: sands.foip.me.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: A
     ttl: "300"
     value: "{{ loadbalancer_ip }}"
@@ -65,8 +61,7 @@
     command: create
     zone: foip.me
     record: strangelrp.foip.me.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: A
     ttl: "300"
     value: "{{ cenote_ip }}"
@@ -77,8 +72,7 @@
     command: create
     zone: foip.me
     record: wakingnightmare.foip.me.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: A
     ttl: "300"
     value: "{{ cenote_ip }}"
@@ -89,8 +83,7 @@
     command: create
     zone: foip.me
     record: fourrivers.foip.me.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: A
     ttl: "300"
     value: "{{ cenote_ip }}"
@@ -101,8 +94,7 @@
     command: create
     zone: foip.me
     record: forgotten.foip.me.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: A
     ttl: "300"
     value: "{{ cenote_ip }}"
@@ -113,8 +105,7 @@
     command: create
     zone: foip.me
     record: ojaqs.foip.me.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: A
     ttl: "300"
     value: "{{ loadbalancer_ip }}"
@@ -125,8 +116,7 @@
     command: create
     zone: foip.me
     record: bless.ojaqs.foip.me.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: A
     ttl: "300"
     value: "{{ loadbalancer_ip }}"
@@ -137,8 +127,7 @@
     command: create
     zone: foip.me
     record: diaspora.foip.me.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: A
     ttl: "300"
     value: "{{ loadbalancer_ip }}"
@@ -149,8 +138,7 @@
     command: create
     zone: foip.me
     record: herodiaries.foip.me.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: A
     ttl: "300"
     value: "{{ loadbalancer_ip }}"
@@ -161,8 +149,7 @@
     command: create
     zone: foip.me
     record: sevenmirrors.foip.me.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: A
     ttl: "300"
     value: "{{ loadbalancer_ip }}"
@@ -173,8 +160,7 @@
     command: create
     zone: foip.me
     record: idlespeculation.foip.me.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: A
     ttl: "300"
     value: "{{ loadbalancer_ip }}"
@@ -185,8 +171,7 @@
     command: create
     zone: foip.me
     record: bobbitworm.foip.me.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: A
     ttl: "300"
     value: "{{ loadbalancer_ip }}"
@@ -197,8 +182,7 @@
     command: create
     zone: foip.me
     record: obviouslyfakeurl.foip.me.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: A
     ttl: "300"
     value: "{{ cenote_ip }}"
