--- a/roles/aws-route53/tasks/zones/larpfic.yml
+++ b/roles/aws-route53/tasks/zones/larpfic.yml
@@ -4,8 +4,7 @@
     state: present
     zone: larpfic.com
     comment: larpfic
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
   tags:
     - larpfic
 
@@ -14,8 +13,7 @@
     state: present
     zone: lrpfic.com
     comment: lrpfic
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
   tags:
     - larpfic
 
@@ -28,8 +26,7 @@
     type: A
     ttl: "300"
     value: "{{ loadbalancer_ip }}"
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
   tags:
     - larpfic
 
@@ -42,8 +39,7 @@
     type: A
     ttl: "300"
     value: "{{ loadbalancer_ip }}"
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
   tags:
     - larpfic
 
@@ -56,8 +52,7 @@
     type: A
     ttl: "300"
     value: "{{ loadbalancer_ip }}"
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
   tags:
     - larpfic
 
@@ -70,7 +65,6 @@
     type: A
     ttl: "300"
     value: "{{ loadbalancer_ip }}"
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
   tags:
     - larpfic
