--- a/roles/aws-route53/tasks/zones/larpme.yml
+++ b/roles/aws-route53/tasks/zones/larpme.yml
@@ -8,8 +8,7 @@
     type: A
     ttl: "300"
     value: "{{ loadbalancer_ip }}"
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
 
 - name: Larpme DNS - MX
   amazon.aws.route53:
@@ -20,8 +19,7 @@
     type: MX
     ttl: "300"
     value: 1 ASPMX.L.GOOGLE.COM.,10 ALT2.ASPMX.L.GOOGLE.COM.,10 ASPMX2.GOOGLEMAIL.COM.,10 ASPMX3.GOOGLEMAIL.COM.,5 ALT1.ASPMX.L.GOOGLE.COM.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
 
 - name: Larpme DNS - NS
   amazon.aws.route53:
@@ -32,8 +30,7 @@
     type: NS
     ttl: "172800"
     value: ns-377.awsdns-47.com.,ns-1181.awsdns-19.org.,ns-1976.awsdns-55.co.uk.,ns-527.awsdns-01.net.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
 
 # - name: Larpme DNS - SOA
 #  amazon.aws.route53:
@@ -54,8 +51,7 @@
     type: SPF
     ttl: "300"
     value: '"v=spf1 a mx include:smtp1.uservoice.com include:_spf.google.com include:spf.mtasv.net ~all"'
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
 
 - name: Larpme DNS - DKIM
   amazon.aws.route53:
@@ -66,8 +62,7 @@
     type: TXT
     ttl: 300
     value: '"k=rsa; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQCNNNCDLsEMUlCnWkjtJ9pQnWAACeQHJG8PYBhfiZPb7XRtWf5eK0XRKSGJzTOJFaS8b+PBaB3cT6VWvTSNYJqQGtfdhLnE6xh5yaiBssdCNQZgeO/OffFVZRB/yyBNSjoXNSTTHXeonLLKxpaZTs7s2MBTJvpE5nl5kM5haRbwVwIDAQAB"'
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
 
 - name: Larpme DNS - Prod API
   amazon.aws.route53:
@@ -78,8 +73,7 @@
     type: CNAME
     ttl: "300"
     value: www.larp.me
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
 
 - name: Larpme DNS - Fic
   amazon.aws.route53:
@@ -90,8 +84,7 @@
     type: CNAME
     ttl: "300"
     value: www.larp.me
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
 
 - name: Larpme DNS - Blog
   amazon.aws.route53:
@@ -102,8 +95,7 @@
     type: CNAME
     ttl: "300"
     value: domains.tumblr.com
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
 
 - name: Larpme DNS - Dev
   amazon.aws.route53:
@@ -114,8 +106,7 @@
     type: A
     ttl: "300"
     value: 127.0.0.1
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
 
 - name: Larpme DNS - Prod WWW
   amazon.aws.route53:
@@ -126,8 +117,7 @@
     type: A
     ttl: "300"
     value: "{{ loadbalancer_ip }}"
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
 
 - name: Larpme DNS - Local Dev
   amazon.aws.route53:
@@ -138,8 +128,7 @@
     type: A
     ttl: "300"
     value: "{{ loadbalancer_ip }}"
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
 
 - name: Larpme DNS - Staging
   amazon.aws.route53:
@@ -150,8 +139,7 @@
     type: A
     ttl: "300"
     value: "{{ loadbalancer_ip }}"
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
 
 - name: Larpme DNS - Staging API
   amazon.aws.route53:
@@ -162,8 +150,7 @@
     type: CNAME
     ttl: "300"
     value: staging.larp.me
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
 
 - name: Larpme DNS - WIKI
   amazon.aws.route53:
@@ -174,8 +161,7 @@
     type: A
     ttl: "300"
     value: "{{ loadbalancer_ip }}"
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
 
 - name: Larpme DNS - LOCATIONS
   amazon.aws.route53:
@@ -186,5 +172,4 @@
     type: A
     ttl: "300"
     value: "{{ loadbalancer_ip }}"
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
