--- a/roles/aws-route53/tasks/zones/warehouse.yml
+++ b/roles/aws-route53/tasks/zones/warehouse.yml
@@ -5,8 +5,7 @@
     command: create
     zone: warehousebasement.com
     record: warehousebasement.com.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: A
     ttl: "300"
     value: "{{ loadbalancer_ip }}"
@@ -19,8 +18,7 @@
     command: create
     zone: warehousebasement.com
     record: warehousebasement.com.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: NS
     ttl: "172800"
     value: ns-983.awsdns-58.net.,ns-1661.awsdns-15.co.uk.,ns-1161.awsdns-17.org.,ns-271.awsdns-33.com.
@@ -45,8 +43,7 @@
     command: create
     zone: warehousebasement.com
     record: www.warehousebasement.com.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: CNAME
     ttl: "300"
     value: warehousebasement.com
