--- a/roles/aws-pdforums/tasks/dns.yml
+++ b/roles/aws-pdforums/tasks/dns.yml
@@ -1,15 +1,16 @@
 ---
 - name: PD Forums DNS - PDForums DKIM
   amazon.aws.route53:
+    profile: aqcom
     overwrite: true
     command: create
     zone: larp.me
     record: 20170201153337pm._domainkey.pdforums.larp.me
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
     type: TXT
     ttl: 300
     value: '"k=rsa; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQCj7W/8a+Nl3ucgDgHCU1ROWW1lzktsq6fq/YQXSbIpBbQX+zpTmEWUE7baIrbEBXggEF15RwYknSEN33W1kGRYqc1uAeoaHQolg+q++2UliaT1p1AXJdK4hphEvh62k6FZ6muu8XvxqDzwnao6B8KLD54E7+PIu4ErMzciLXLM6wIDAQAB"'
+  tags:
+    - aws
 
 # - name: PD Forums DNS - PDForums SPF
 #  amazon.aws.route53:
@@ -25,36 +26,39 @@
 
 - name: PD Forums DNS - PDForums DMARC
   amazon.aws.route53:
+    profile: aqcom
     overwrite: true
     command: create
     zone: larp.me
     record: postmark.pdforums.larp.me
     value: pm.mtasv.net
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
     type: CNAME
     ttl: 300
+  tags:
+    - aws
 
 - name: PD Forums DNS - PDForums A
   amazon.aws.route53:
+    profile: aqcom
     overwrite: true
     command: create
     zone: larp.me
     record: pdforums.larp.me
     value: 138.201.60.152
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
     type: A
     ttl: 300
+  tags:
+    - aws
 
 - name: PD Forums DNS - PDForums A
   amazon.aws.route53:
+    profile: aqcom
     overwrite: true
-    command: create
+    command: delete
     zone: larp.me
     record: old.pdforums.larp.me
     value: 138.201.60.152
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
     type: A
     ttl: 300
+  tags:
+    - aws
