--- a/roles/aws-pdforums/tasks/iam.yml
+++ b/roles/aws-pdforums/tasks/iam.yml
@@ -3,10 +3,12 @@
   amazon.aws.iam_user:
     name: "{{ item }}"
     state: present
+    profile: aqcom
   with_items:
     - pdforums-discourse
   tags:
     - pdforums-discourse
+    - aws
 
 - name: Attach all-access S3 policy to discourse user
   amazon.aws.iam_policy:
@@ -15,8 +17,10 @@
     policy_name: discourse-upload-access
     state: present
     policy_json: "{{ lookup('file', 'discourse-bucket-access.json') }}"
+    profile: aqcom
   tags:
     - pdforums-discourse
+    - aws
 
 - name: Attach all-access S3 policy to discourse user
   amazon.aws.iam_policy:
@@ -24,6 +28,8 @@
     iam_name: pdforums-discourse
     policy_name: discourse-backups-access
     state: present
+    profile: aqcom
     policy_json: "{{ lookup('file', 'discourse-backups-access.json') }}"
   tags:
     - pdforums-discourse
+    - aws
