--- a/roles/aws-route53/tasks/main.yml
+++ b/roles/aws-route53/tasks/main.yml
@@ -5,112 +5,114 @@
     name:
       - boto
       - botocore
+  tags:
+    - aws
 
 - name: Aquarionics DNS
-  ansible.builtin.include_tasks: aquarionics.yml
+  ansible.builtin.include_tasks: zones/aquarionics.yml
   tags:
     - aws
     - aquarionics
 
 - name: Update Route53 for aqxs
-  ansible.builtin.include_tasks: aqxs.yml
+  ansible.builtin.include_tasks: zones/aqxs.yml
   tags:
     - aws
 
 - name: Update Route53 for camlarp
-  ansible.builtin.include_tasks: camlarp.yml
+  ansible.builtin.include_tasks: zones/camlarp.yml
   tags:
     - aws
     - camlarp
 
 - name: Update Route53 for cleartext
-  ansible.builtin.include_tasks: cleartext.yml
+  ansible.builtin.include_tasks: zones/cleartext.yml
   tags:
     - aws
 
 - name: Update Route53 for factionfiction
-  ansible.builtin.include_tasks: factionfiction.yml
+  ansible.builtin.include_tasks: zones/factionfiction.yml
   tags:
     - aws
 
 - name: Update Route53 for foipme
-  ansible.builtin.include_tasks: foipme.yml
+  ansible.builtin.include_tasks: zones/foipme.yml
   tags:
     - aws
 
 - name: Update Route53 for warehouse
-  ansible.builtin.include_tasks: warehouse.yml
+  ansible.builtin.include_tasks: zones/warehouse.yml
   tags:
     - aws
 
 - name: Update Route53 for monthlymoon
-  ansible.builtin.include_tasks: monthlymoon.yml
+  ansible.builtin.include_tasks: zones/monthlymoon.yml
   tags:
     - aws
     - monthlymoon
 
 - name: Update Route53 for ludoistic
-  ansible.builtin.include_tasks: ludoistic.yml
+  ansible.builtin.include_tasks: zones/ludoistic.yml
   tags:
     - aws
     - ludoistic
 
 - name: Update Route53 for carcosadreams
-  ansible.builtin.include_tasks: carcosadreams.yml
+  ansible.builtin.include_tasks: zones/carcosadreams.yml
   tags:
     - aws
     - carcosadreams
 
 - name: Update Route53 for larpfic
-  ansible.builtin.include_tasks: larpfic.yml
+  ansible.builtin.include_tasks: zones/larpfic.yml
   tags:
     - aws
     - larpfic
 
 - name: Update Route53 for larpme
-  ansible.builtin.include_tasks: larpme.yml
+  ansible.builtin.include_tasks: zones/larpme.yml
   tags:
     - aws
     - larpme
 
 - name: Update Route53 for conterio
-  ansible.builtin.include_tasks: conterio.yml
+  ansible.builtin.include_tasks: zones/conterio.yml
   tags:
     - aws
     - conterio
 
 - name: Update Route53 for hubris
-  ansible.builtin.include_tasks: hubris.yml
+  ansible.builtin.include_tasks: zones/hubris.yml
   tags:
     - aws
     - hubris
 
 - name: Update Route53 for bromioscreations
-  ansible.builtin.include_tasks: bromioscreations.yml
+  ansible.builtin.include_tasks: zones/bromioscreations.yml
   tags:
     - aws
     - bromioscreations
 
 - name: Update Route53 for istic
-  ansible.builtin.include_tasks: istic.yml
+  ansible.builtin.include_tasks: zones/istic.yml
   tags:
     - aws
     - istic_net
 
 - name: Update Route53 for nanocountdown
-  ansible.builtin.include_tasks: nanocountdown.yml
+  ansible.builtin.include_tasks: zones/nanocountdown.yml
   tags:
     - aws
     - nanocountdown
 
 - name: Update Route53 for dagon_church
-  ansible.builtin.include_tasks: dagon_church.yml
+  ansible.builtin.include_tasks: zones/dagon_church.yml
   tags:
     - aws
     - dagon_church
 
 - name: Update Route53 for nicholasavenell
-  ansible.builtin.include_tasks: nicholasavenell.yml
+  ansible.builtin.include_tasks: zones/nicholasavenell.yml
   tags:
     - aws
     - nicholasavenell
