--- a/roles/aws-route53/tasks/zones/dagon_church.yml
+++ b/roles/aws-route53/tasks/zones/dagon_church.yml
@@ -8,8 +8,7 @@
     type: A
     ttl: "300"
     value: "{{ loadbalancer_ip }}"
-    aws_access_key: "{{ istic_aws_key }}"
-    aws_secret_key: "{{ istic_aws_secret }}"
+    aws_profile: istic
   tags:
     - dagon_church
 
@@ -22,8 +21,7 @@
     type: CNAME
     ttl: "300"
     value: dagon.church
-    aws_access_key: "{{ istic_aws_key }}"
-    aws_secret_key: "{{ istic_aws_secret }}"
+    aws_profile: istic
   tags:
     - dagon_church
 
@@ -36,7 +34,6 @@
     type: CNAME
     ttl: "300"
     value: dagon.church
-    aws_access_key: "{{ istic_aws_key }}"
-    aws_secret_key: "{{ istic_aws_secret }}"
+    aws_profile: istic
   tags:
     - dagon_church
