--- a/roles/aws-route53/tasks/zones/factionfiction.yml
+++ b/roles/aws-route53/tasks/zones/factionfiction.yml
@@ -5,8 +5,7 @@
     command: create
     zone: factionfiction.net
     record: factionfiction.net.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: A
     ttl: "300"
     value: "{{ loadbalancer_ip }}"
@@ -17,8 +16,7 @@
     command: create
     zone: factionfiction.net
     record: factionfiction.net.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: NS
     ttl: "172800"
     value: ns-1302.awsdns-34.org.,ns-1969.awsdns-54.co.uk.,ns-147.awsdns-18.com.,ns-614.awsdns-12.net.
@@ -41,8 +39,7 @@
     command: create
     zone: factionfiction.net
     record: www.factionfiction.net.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: CNAME
     ttl: "300"
     value: factionfiction.net
