--- a/roles/aws-route53/tasks/zones/hubris.yml
+++ b/roles/aws-route53/tasks/zones/hubris.yml
@@ -4,8 +4,7 @@
     state: present
     zone: hubris.house
     comment: hubris.house
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
   tags:
     - hubris.house
 
@@ -18,8 +17,7 @@
     type: A
     ttl: "300"
     value: "{{ loadbalancer_ip }}"
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
   tags:
     - hubris.house
 
@@ -32,8 +30,7 @@
     type: A
     ttl: "300"
     value: "{{ loadbalancer_ip }}"
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
   tags:
     - hubris.house
 
@@ -46,8 +43,7 @@
     type: CNAME
     ttl: "300"
     value: google.com
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
   tags:
     - hubris.house
 
@@ -60,8 +56,7 @@
     type: A
     ttl: "300"
     value: "{{ loadbalancer_ip }}"
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
   tags:
     - hubris.house
 
@@ -74,8 +69,7 @@
     value: '"google-site-verification=y3Y66Y4hWEyWQ3cm4WwsyH3Er9vEjzZxrKZAsNTXIE4"'
     type: TXT
     ttl: "300"
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
   tags:
     - hubris.house
     - hubris.house.google
@@ -89,8 +83,7 @@
     type: MX
     ttl: "300"
     value: 1 ASPMX.L.GOOGLE.COM.,5 ALT1.ASPMX.L.GOOGLE.COM.,5 ALT2.ASPMX.L.GOOGLE.COM.,10 ALT3.ASPMX.L.GOOGLE.COM.,10 ALT4.ASPMX.L.GOOGLE.COM.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
   tags:
     - hubris.house
     - hubris.house.google
