--- a/roles/aws-route53/tasks/zones/monthlymoon.yml
+++ b/roles/aws-route53/tasks/zones/monthlymoon.yml
@@ -8,8 +8,7 @@
     command: create
     zone: themonthlymoon.com
     record: themonthlymoon.com.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: A
     ttl: "300"
     value: "{{ loadbalancer_ip }}"
@@ -20,8 +19,7 @@
     command: create
     zone: themonthlymoon.com
     record: themonthlymoon.com.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: NS
     ttl: "172800"
     value: ns-727.awsdns-26.net.,ns-1489.awsdns-58.org.,ns-1.awsdns-00.com.,s-1630.awsdns-11.co.uk.
@@ -44,8 +42,7 @@
     command: create
     zone: themonthlymoon.com
     record: www.themonthlymoon.com.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: CNAME
     ttl: "300"
     value: themonthlymoon.com
@@ -56,8 +53,7 @@
     command: create
     zone: themonthlymoon.com
     record: google._domainkey.themonthlymoon.com.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: TXT
     ttl: "300"
     value: '"v=DKIM1; k=rsa; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQCeXipYp/HVbmCmGSDI5WKA6vB2679OoStEVKXePsMD0WfEOK+BqQv1lHBzjL2AlNvGmMPf2Ccd6cnk0HdsaQqpkbS1TyOWuZx7P191Q1bHhT5mxvZoAdYbv5XN+0j/SWsqhg/2zYmCQhB8ed499sX5esIUWYQK4djh+xV7GaYxCwIDAQAB"'
@@ -68,8 +64,7 @@
     command: create
     zone: themonthlymoon.com
     record: themonthlymoon.com.
-    aws_access_key: "{{ aqcom_aws_key }}"
-    aws_secret_key: "{{ aqcom_aws_secret }}"
+    aws_profile: aqcom
     type: MX
     ttl: "300"
     value: 5 ALT1.ASPMX.L.GOOGLE.COM.,5 ALT2.ASPMX.L.GOOGLE.COM.,1 ASPMX.L.GOOGLE.COM.,10 ASPMX2.GOOGLEMAIL.COM.,10 ASPMX3.GOOGLEMAIL.COM.
