--- a/roles/aws-route53/tasks/zones/nanocountdown.yml
+++ b/roles/aws-route53/tasks/zones/nanocountdown.yml
@@ -8,8 +8,7 @@
     type: A
     ttl: "300"
     value: "{{ cenote_ip }}"
-    aws_access_key: "{{ istic_aws_key }}"
-    aws_secret_key: "{{ istic_aws_secret }}"
+    aws_profile: istic
   tags:
     - nanocountdown
 
@@ -22,8 +21,7 @@
     type: CNAME
     ttl: "300"
     value: cenote.gkhs.net
-    aws_access_key: "{{ istic_aws_key }}"
-    aws_secret_key: "{{ istic_aws_secret }}"
+    aws_profile: istic
   tags:
     - nanocountdown
 
@@ -36,8 +34,7 @@
     type: A
     ttl: "300"
     value: "{{ cenote_ip }}"
-    aws_access_key: "{{ istic_aws_key }}"
-    aws_secret_key: "{{ istic_aws_secret }}"
+    aws_profile: istic
   tags:
     - nanocountdown
 
@@ -50,8 +47,7 @@
     type: CNAME
     ttl: "300"
     value: cenote.gkhs.net
-    aws_access_key: "{{ istic_aws_key }}"
-    aws_secret_key: "{{ istic_aws_secret }}"
+    aws_profile: istic
   tags:
     - nanocountdown
 
@@ -64,7 +60,6 @@
     type: A
     ttl: "300"
     value: "{{ cenote_ip }}"
-    aws_access_key: "{{ istic_aws_key }}"
-    aws_secret_key: "{{ istic_aws_secret }}"
+    aws_profile: istic
   tags:
     - nanocountdown
