--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -9,9 +9,9 @@ jobs:
       ANSIBLE_VAULT_PASSWORD: ${{ secrets.VaultPassword }}
     steps:
     # Important: This sets up your GITHUB_WORKSPACE environment variable
-      - uses: actions/checkout@v3
-      - name: Drop ansible.cfg file
-        run: rm ansible.cfg
+      - uses: actions/checkout@v4
+      # - name: Drop ansible.cfg file
+      #   run: rm ansible.cfg
 
       - name: Lint Ansible Playbook
-        uses: ansible-community/ansible-lint-action@main
+        uses: ansible/ansible-lint@v6
